--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -15,7 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
     :host {
       display: block;
-      --app-primary-color: #3d4ba8;
+      --app-primary-color: var(--app-dynamic-primary-color);
       --app-secondary-color: black;
     }
     app-header {
