--- a/src/behaviors/push-notification-behavior.html
+++ b/src/behaviors/push-notification-behavior.html
@@ -83,16 +83,19 @@
             that.$.messagingTokenDB.setStoredValue(that.$.messagingTokenDB.path, that.$.messaging.token);
             that.fire("openToast", {toastText: "Push notifications have been setup! You will now receive push notifications."})
             var path = "/homes/" + that.home + "/users/" + that.user.uid + "/settings/notificationSources/" + that.currentDevice;
-            that.$.userSettingsDB.setStoredValue(path, true);
+            that.$.userSettingsDB.setStoredValue(path, {deviceLoggedIn: true, active: true});
             that.$.requestNotificationModal.close();
           })
           .catch(function(err) {
             console.log(err);
             that.fire("openToast", {toastText: "You must accept in order to get push notifications."});
-            var path = "/homes/" + that.home + "/users/" + that.user.uid + "/settings/notificationSources/" + that.currentDevice;
-            that.$.userSettingsDB.setStoredValue(path, false);
             that.$.requestNotificationModal.close();
           });
+      },
+
+      setDeviceLoggedIn: function(active) {
+        var path = "/homes/" + that.home + "/users/" + that.user.uid + "/settings/notificationSources/" + that.currentDevice + "/deviceLoggedIn";
+        return that.$.userSettingsDB.setStoredValue(path, active);
       },
 
       _handleMessage: function(e) {
