updated device management to save whether or not current device is logged in

--- a/src/behaviors/push-notification-behavior.html
+++ b/src/behaviors/push-notification-behavior.html
@@ -94,8 +94,8 @@
       },
 
       setDeviceLoggedIn: function(active) {
-        var path = "/homes/" + that.home + "/users/" + that.user.uid + "/settings/notificationSources/" + that.currentDevice + "/deviceLoggedIn";
-        return that.$.userSettingsDB.setStoredValue(path, active);
+        var path = "/homes/" + this.home + "/users/" + this.user.uid + "/settings/notificationSources/" + this.currentDevice + "/deviceLoggedIn";
+        return this.$.userSettingsDB.setStoredValue(path, active);
       },
 
       _handleMessage: function(e) {
