--- a/src/pages/admin/ad-payment.html
+++ b/src/pages/admin/ad-payment.html
@@ -518,7 +518,7 @@
           if (!!!this.Stripe)
             this.Stripe = Stripe;
           if (!!!this.Stripe.key)
-            this.Stripe.setPublishableKey('pk_live_Q0t9Ejfm4UAlToELWvZRlJGK');
+            this.Stripe.setPublishableKey('pk_test_HelqkF6yfrw7IvyTtgtOG7Sb');
         },
         _stripeExists: function() {
           return typeof Stripe != 'undefined';
@@ -590,14 +590,14 @@
           this.$.stripeCustomerCall.body={
             customerId:this.customer.customerID
           };
-          this.$.stripeCustomerCall.url="https://glacial-tor-36526.herokuapp.com/payments/customerinfo";
+          this.$.stripeCustomerCall.url="http://localhost:3000/payments/customerinfo";
           this.$.stripeCustomerCall.generateRequest();
         },
         _listPlans:function(){
           this.$.listPlansCall.body={
             request:"listPlans"
           };
-          this.$.listPlansCall.url="https://glacial-tor-36526.herokuapp.com/payments/listplans"
+          this.$.listPlansCall.url="http://localhost:3000/payments/listplans"
           this.$.listPlansCall.generateRequest();
         },
         _alreadyOwned:function(owned){
@@ -677,7 +677,7 @@
           if(res.error){
             this.fire("openToast",{toastText:"Your payment could not be processed for the following reason: "+res.error.message});
           } else {
-            this.$.initSubCall.url="https://glacial-tor-36526.herokuapp.com/payments/initialsub";
+            this.$.initSubCall.url="http://localhost:3000/payments/initialsub";
             this.$.initSubCall.body={
               stripeToken:res.id,
               home:this.params.home,
@@ -692,7 +692,7 @@
           if(res.error){
             this.fire("openToast", {toastText:"Your card could not be added for the following reason: "+res.error.message});
           } else {
-            this.$.addCardCall.url="https://glacial-tor-36526.herokuapp.com/payments/addcard";
+            this.$.addCardCall.url="http://localhost:3000/payments/addcard";
             this.$.addCardCall.body={
               stripeToken:res.id,
               customerId:this.customer.customerID
@@ -740,7 +740,7 @@
           this.$.confirmDialog.open();
         },
         confirmDeleteCard:function(cardId){
-          this.$.deleteCardCall.url="https://glacial-tor-36526.herokuapp.com/payments/deletecard";
+          this.$.deleteCardCall.url="http://localhost:3000/payments/deletecard";
           this.$.deleteCardCall.body={
             customerId:this.customer.customerID,
             cardId:cardId
@@ -755,7 +755,7 @@
           this.$.confirmDialog.open();
         },
         confirmSetDefaultCard:function(cardId){
-          this.$.defaultCardCall.url="https://glacial-tor-36526.herokuapp.com/payments/setdefaultcard";
+          this.$.defaultCardCall.url="http://localhost:3000/payments/setdefaultcard";
           this.$.defaultCardCall.body={
             customerId:this.customer.customerID,
             cardId:cardId
@@ -778,7 +778,7 @@
             planId:planId,
             users:this.userCount,
           };
-          this.$.addPlanCall.url="https://glacial-tor-36526.herokuapp.com/payments/addplan";
+          this.$.addPlanCall.url="http://localhost:3000/payments/addplan";
           this.$.addPlanCall.generateRequest();
         },
         deletePlan:function(e){
@@ -798,14 +798,14 @@
             planId:planId,
             subId:subId
           };
-          this.$.deletePlanCall.url="https://glacial-tor-36526.herokuapp.com/payments/deleteplan";
+          this.$.deletePlanCall.url="http://localhost:3000/payments/deleteplan";
           this.$.deletePlanCall.generateRequest();
         },
         _getCharges:function(){
           this.$.chargesCall.body={
             customerId:this.customer.customerID
           };
-          this.$.chargesCall.url="https://glacial-tor-36526.herokuapp.com/payments/getcharges";
+          this.$.chargesCall.url="http://localhost:3000/payments/getcharges";
           this.$.chargesCall.generateRequest();
         },
         //handle api calls
