--- a/src/behaviors/trial-restriction-behavior.html
+++ b/src/behaviors/trial-restriction-behavior.html
@@ -5,97 +5,101 @@
   (function(){
     "use-strict";
     /*
-    @polymerBehavior Polymer.simpleViewResizeBehavior
+    @polymerBehavior Polymer.trialRestrictionBehavior
     */
-    Polymer.trailRestrictionBehavior={
+    Polymer.trialRestrictionBehavior={
       is:"trial-restriction-behavior",
 
-      properties: {
-        patientCount: {
-          type: Number,
-          value: 0,
-          observer: "_patientCountChanged"
-        },
-
-        corePlan: {
-          type: Object,
-          value: null,
-          observer: "_corePlanChanged"
-        }
-
-      },
+      observers: [
+        "_corePlanChanged(modulePayments, patientCount)",
+        "notifyRemainingPatients(modulePayments, patientCount)"
+      ],
 
       ready: function() {
-        this.listenForPatientCount();
-        this.checkPaid();
+        this.watchPatientList();
+        this.watchModulePayments();
       },
 
-      listenForPatientCount: function() {
-        var that = this;
-        this.$.suIndexDB.query.on("value", function(snap) {
-          that.set("patientCount", that.patientList.length)
-          console.log(that.patientCount);
-        },
-        function(err) {
-          console.log(err);
-        });
+      watchPatientList: function() {
+        this.$.suIndexDB.query.on("value", function(patientListData) {
+          this.set("patientCount", this.patientList.length);
+        }.bind(this));
       },
 
-      _patientCountChanged: function(count) {
-        switch(true) {
-          case (count < 7):
-            console.log("less than 7 users");
-            break;
-          case (count === 7):
-            console.log("3 patients left");
-            this.notifyPatientsRemaining(count);
-            break;
-          case (count === 8):
-            console.log("2 patients left");
-            this.notifyPatientsRemaining(count);
-            break;
-          case (count === 9):
-            console.log("1 patient left");
-            this.notifyPatientsRemaining(count);
-            break;
-          case (count > 9):
-            console.log("no patients left");
-            break;
-          default:
-            console.log("something went wrong");
-            break;
-        }
+      watchModulePayments: function() {
+        this.$.paymentsDB.query.on("value", function(modulePaymentsData) {
+          var paymentsObj = this.payments.reduce(function(obj, payment) {
+            obj[payment.id] = payment.status;
+            return obj;
+          }, {});
+          if(!paymentsObj.core1) {
+            paymentsObj.core1 = 'free';
+          };
+          this.set("modulePayments", paymentsObj);
+
+        }.bind(this));
+      },
+
+      notifyRemainingPatients: function(modulePayments, count) {
+        console.log(modulePayments.core1, count);
+        if(modulePayments.core1 === 'free') {
+          switch(true) {
+            case (count < 7):
+              console.log('less than 7');
+              break;
+            case (count === 7):
+              console.log('7 remaining');
+              this.notifyPatientsRemaining(count);
+              break;
+            case (count === 8):
+              console.log('8 remaining');
+              this.notifyPatientsRemaining(count);
+              break;
+            case (count === 9):
+              console.log('9 remaining');
+              this.notifyPatientsRemaining(count);
+              break;
+            case (count > 9):
+              console.log('more than 9');
+              this.noMoreFreePatients();
+              break;
+            default:
+              console.log("something went wrong");
+              break;
+          };
+        };
       },
 
       notifyPatientsRemaining: function(count) {
         var remainingPatients = 10 - count;
-        var remainingString = remainingPatients > 1 ? "There are only " + count +  " free remaining service users." : "There is only " + count +  " free remaining service user."
-        this.fire("openToast", {toastText: remainingString + "No more than 10 service users can be added on the free plan." });
+        var remainingString = remainingPatients > 1 ? "There are only " + remainingPatients +  " free remaining service users." : "There is only " + remainingPatients +  " free remaining service user.";
+        var message = remainingString + "No more than 10 service users can be added on the free plan."
+        this.fire("openToast", {toastText: message});
+        this.$.trialNotifier.setSimpleNotification(this.home, message, 'remainingPatients' + remainingPatients)
+          .then(function() {
+            console.log("notification saved");
+          })
+          .catch(function(err) {
+            console.error(err);
+          });
       },
 
       noMoreFreePatients: function() {
         if(!this.corePlan) {
-          this.fire("openToast", {toastText: "You have reached the maximum amount of free service users with the free plan. In order to add more service users, subscribe to a payment plan." });
+          var message = "You have reached the maximum amount of free service users with the free plan. In order to add more service users, subscribe to a payment plan.";
+          this.fire("openToast", {toastText: message});
+          this.$.trialNotifier.setSimpleNotification(this.home, message, 'remainingPatients0')
+            .then(function() {
+              console.log("notification saved");
+            })
+            .catch(function(err) {
+              console.error(err);
+            });
         };
       },
 
-      checkPaid: function() {
-        var that = this;
-        this.$.paymentsDB.ref.on("value", function(snapshot) {
-          var payments = snapshot.val();
-          for(x in payments) {
-            if(payments[x].id === "core1"){
-              that.set("corePlan", payments[x]);
-              console.log(that.corePlan)
-            };
-          };
-          that.noMoreFreePatients();
-        });
-      },
-
-      _corePlanChanged: function(corePlan) {
-        console.log(corePlan);
-        if(corePlan) {
+      _corePlanChanged: function(modulePayments, patientCount) {
+        if(((modulePayments.core1 != 'canceled' && modulePayments.core1 != 'free') || patientCount < 10)) {
           this.customStyle["--create-patient-fab-color"] = "#ff4081";
         } else {
           this.customStyle["--create-patient-fab-color"] = "#d1d1e0";
